<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.ucsb.nceas</groupId>
  <artifactId>ezid</artifactId>
  <version>1.0.3</version>
  <packaging>jar</packaging>

  <name>ezid</name>
  <description>Utility library for accessing the EZID service for creation and management of unique identifiers.</description>
  <url>https://github.com/mbjones/ezid</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <scm>
  	<url>https://github.com/NCEAS/ezid.git</url>
  </scm>
  <organization>
  	<name>National Center for Ecological Analysis and Synthesis, UC Santa Barbara</name>
  	<url>http://nceas.ucsb.edu</url>
  </organization>
  <dependencies>
    <dependency>
    	<groupId>org.apache.httpcomponents</groupId>
    	<artifactId>httpclient</artifactId>
    	<version>4.5.1</version>
    	<type>jar</type>
    	<scope>compile</scope>
    </dependency>
    <dependency>
    	<groupId>junit</groupId>
    	<artifactId>junit</artifactId>
    	<version>4.10</version>
    	<type>jar</type>
    	<scope>compile</scope>
    </dependency>
  </dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
